src/components/ChatContent/ChatContent.scss
.chat-content-scroll-container {
  position: absolute;
  height: 100%;
  width: 100%;
  padding-bottom: 158px;
  background-color: var(--react-autoql-background-color-primary);

  .chat-content-scrollbars-container {
  }
}

.react-autoql-drawer .response-loading-container {
  position: absolute;
  bottom: 102px;
  left: 20px;
  z-index: 1;
}

.react-autoql-drawer .chat-bar-container {
  position: absolute;
  bottom: 0;
  padding: 10px;
  padding-top: 0;
  height: 92px;
  width: 100%;

  background: transparent;
}

.react-autoql-drawer .watermark {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: var(--react-autoql-text-color-placeholder);
  opacity: 0.7;
  top: 6px;
  width: calc(100% - 10px);
  font-size: 13px;

  .react-autoql-icon {
    margin-right: 5px;
  }
}

.react-autoql-drawer .chat-drawer-chat-bar {
  flex-shrink: 0;
  flex-grow: 0;
  height: 60px;
  animation: fadeIn 0.3s;
}

